# pack-repo-4ai

./: LICENSE  README.md  pyproject.toml
pack_repo_4ai/: core.py
